--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,54 @@
-.slider {
-  position: relative;
-  height: 100vh;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.home,
+.services,
+.service2,
+.products,
+.sign-up {
   display: flex;
-  justify-content: center;
+  height: 90vh;
   align-items: center;
-}
-
-.image {
-  width: 1000px;
-  height: 600px;
-  border-radius: 10px;
-}
-
-.right-arrow {
-  position: absolute;
-  top: 10%;
-  right: 32px;
+  justify-content: center;
   font-size: 3rem;
-  color: aquamarine;
-  z-index: 10;
-  cursor: pointer;
-  user-select: none;
 }
 
-.left-arrow {
-  position: absolute;
-  top: 10%;
-  left: 32px;
-  font-size: 3rem;
-  color: aquamarine;
-  z-index: 10;
-  cursor: pointer;
-  user-select: none;
+.services {
+  background-image: url('/images/img-2.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
 }
 
-.notes {
-  position: absolute;
-  bottom: 10%;
-  left: 50%;
-  margin-left: -150px;
+.service2 {
+  background-image: url('/images/img-2.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
 }
 
-.title {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  margin-left: -60px;
+.products {
+  background-image: url('/images/img-1.jpg');
+  background-position: center;
+  background-size: fill;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+
+.sign-up {
+  background-image: url('/images/img-8.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
 }
